# pkp

./: .envrc  .gitignore  README.md  build-termux.sh  build.sh  dev-update.sh  pkp.py  pyproject.toml  requirements-dev.txt  requirements.txt  update-README.sh  update-requirements.sh
.github/workflows/: checks.yaml  ci.yaml  lint.yaml  multiarch.yaml  release.yaml  releases.yaml
