[tool.poetry]
name = "pkp"
version = "0.6.4"
description = "Straightforward CLI for KeePass - powered by pykeepass"
authors = ["Philipp Schmitt <philipp@schmitt.co>"]
repository = "https://github.com/pschmitt/pkp"
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.scripts]
pkp = "pkp:cli_main"

[tool.poetry.dependencies]
python = ">= 3.8, < 4.0"
pykeepass = ">=3.2.1,<5.0.0"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.3"
staticx = "^0.12.1"
isort = "^5.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 80
